--- a/responsive.css
+++ b/responsive.css
@@ -1,8 +1,8 @@
 /* Responsibe-design */
-@media(min-width:1280px){
-    .brand-name {
-     margin-left:1rem ;
-   }
+@media(max-width:1280px){
+    .brand-name.aos-init.aos-animate {
+        margin-left: 1rem;
+    }
    
 }
 
